Benchmark fixes (#4194)s